--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,9 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// For Bottom navigation bar
+ext {
+    appCompatVersion = '1.0.0'
+    designSupportVersion = '1.0.0'
+}
